fix(orion-atomic-bomb): Fix colors and alignment

--- a/packages/orion/src/Dropdown/dropdown.css
+++ b/packages/orion/src/Dropdown/dropdown.css
@@ -67,10 +67,6 @@
   transform: rotate(-180deg);
 }
 
-.dropdown-icon {
-  @apply transition-default;
-}
-
 /**
  * Search
  */
